--- a/config/default.yml
+++ b/config/default.yml
@@ -3,9 +3,9 @@ server:
 
 db:
   type: 'mysql'
-  port: 8889
+  port: 3306
   database: 'fast-shopping-app'
-  synchronize: true
+  synchronize: false
 
 jwt:
   expiresIn: 3600
