--- a/config/development.yml
+++ b/config/development.yml
@@ -2,7 +2,7 @@ db:
   host: 'localhost'
   username: 'root'
   password: 'root'
-  synchronize: true
+  synchronize: false
 
 jwt:
   secret: 'topSecret51'
